--- a/src/main/webapp/WEB-INF/jsp/login.html
+++ b/src/main/webapp/WEB-INF/jsp/login.html
@@ -1,10 +1,11 @@
-<%@ page contentType="text/html;charset=UTF-8"%>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="java">
 <head>
     <title>login</title>
     <style>
         body{
             font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
+            background-image: url("../../img/leaves.png");
+            background-repeat: repeat;
         }
         *,
         *:before,
@@ -38,6 +39,9 @@
             outline: none;
             border: none;
         }
+        a{
+            text-decoration: none;
+        }
         button{
             margin-top: 50px;
             width: 100%;
@@ -49,7 +53,6 @@
             border-radius: 5px;
             cursor: pointer;
         }
-
         form h3{
             font-size: 32px;
             font-weight: 500;
@@ -80,8 +83,9 @@
 </head>
 
 <body>
-<form id="form1" name="form1" method="post">
-    <h3>WYM</h3>
+<form th:action="@{/login.html}" id="login-form" name="login-form" method="post">
+    <a href="http://127.0.0.1:8080"><h3>WYM</h3></a>
+    <p th:if="${loginError}" class="error">Wrong user or password</p>
     <label for="textfield">логин:</label>
     <input type="text" placeholder="abobus" name="textfield" id="textfield">
     <label for="password">пароль:</label>
